app/assets/css/main.css
@import 'tailwindcss';
@import './fonts.css' layer(base);
@import './noise.css';

@custom-variant dark (&:is(.dark *));

:root {
	--background: oklch(0.9818 0.005 95);
	--foreground: oklch(0.3438 0.0269 95.7226);
	--card: oklch(0.99 0.005 95);
	--card-foreground: oklch(0.1908 0.002 106.5859);
	--popover: oklch(1 0.005 95);
	--popover-foreground: oklch(0.2671 0.0196 98.939);
	--primary: oklch(0.588 0.158 241.966);
	--primary-foreground: oklch(1 0 0);
	--secondary: oklch(0.9245 0.0138 92.9892);
	--secondary-foreground: oklch(0.4334 0.0177 98.6048);
	--muted: oklch(0.9341 0.0153 90.239);
	--muted-foreground: oklch(0.6059 0.0075 97.4233);
	--accent: oklch(0.9245 0.0138 92.9892);
	--accent-foreground: oklch(0.443 0.11 240.79);
	--destructive: oklch(0.55 0.19 27.518);
	--destructive-foreground: oklch(1 0 0);
	--destructive-light: oklch(0.6 0.19 27.518);
	--border: oklch(0.8847 0.0069 97.3627);
	--input: oklch(0.7621 0.0156 98.3528);
	--ring: oklch(0.746 0.16 232.661);
	--chart-1: oklch(0.5583 0.1276 42.9956);
	--chart-2: oklch(0.6898 0.1581 290.4107);
	--chart-3: oklch(0.8816 0.0276 93.128);
	--chart-4: oklch(0.8822 0.0403 298.1792);
	--chart-5: oklch(0.5608 0.1348 42.0584);
	--sidebar: oklch(0.9663 0.008 98.8792);
	--sidebar-foreground: oklch(0.359 0.0051 106.6524);
	--sidebar-primary: oklch(0.6171 0.1375 39.0427);
	--sidebar-primary-foreground: oklch(0.9881 0 0);
	--sidebar-accent: oklch(0.9245 0.0138 92.9892);
	--sidebar-accent-foreground: oklch(0.325 0 0);
	--sidebar-border: oklch(0.9401 0 0);
	--sidebar-ring: oklch(0.7731 0 0);

	--logo-medium: hsl(312, 38%, 58%);
	--logo-light: hsl(313, 20%, 77%);
}

.dark {
	--background: oklch(0.2679 0.0036 106.6427);
	--foreground: oklch(0.8074 0.0142 93.0137);
	--card: oklch(0.2679 0.0036 106.6427);
	--card-foreground: oklch(0.9818 0.0054 95.0986);
	--popover: oklch(0.3085 0.0035 106.6039);
	--popover-foreground: oklch(0.9211 0.004 106.4781);
	--primary: oklch(0.6724 0.1308 38.7559);
	--primary-foreground: oklch(1 0 0);
	--secondary: oklch(0.9818 0.0054 95.0986);
	--secondary-foreground: oklch(0.3085 0.0035 106.6039);
	--muted: oklch(0.2213 0.0038 106.707);
	--muted-foreground: oklch(0.7713 0.0169 99.0657);
	--accent: oklch(0.213 0.0078 95.4245);
	--accent-foreground: oklch(0.9663 0.008 98.8792);
	--destructive: oklch(0.6368 0.2078 25.3313);
	--destructive-foreground: oklch(1 0 0);
	--border: oklch(0.3618 0.0101 106.8928);
	--input: oklch(0.4336 0.0113 100.2195);
	--ring: oklch(0.6724 0.1308 38.7559);
	--chart-1: oklch(0.5583 0.1276 42.9956);
	--chart-2: oklch(0.6898 0.1581 290.4107);
	--chart-3: oklch(0.213 0.0078 95.4245);
	--chart-4: oklch(0.3074 0.0516 289.323);
	--chart-5: oklch(0.5608 0.1348 42.0584);
	--sidebar: oklch(0.2357 0.0024 67.7077);
	--sidebar-foreground: oklch(0.8074 0.0142 93.0137);
	--sidebar-primary: oklch(0.325 0 0);
	--sidebar-primary-foreground: oklch(0.9881 0 0);
	--sidebar-accent: oklch(0.168 0.002 106.6177);
	--sidebar-accent-foreground: oklch(0.8074 0.0142 93.0137);
	--sidebar-border: oklch(0.9401 0 0);
	--sidebar-ring: oklch(0.7731 0 0);
}

@theme inline {
	--color-background: var(--background);
	--color-foreground: var(--foreground);
	--color-card: var(--card);
	--color-card-foreground: var(--card-foreground);
	--color-popover: var(--popover);
	--color-popover-foreground: var(--popover-foreground);
	--color-primary: var(--primary);
	--color-primary-foreground: var(--primary-foreground);
	--color-secondary: var(--secondary);
	--color-secondary-foreground: var(--secondary-foreground);
	--color-muted: var(--muted);
	--color-muted-foreground: var(--muted-foreground);
	--color-accent: var(--accent);
	--color-accent-foreground: var(--accent-foreground);
	--color-destructive: var(--destructive);
	--color-destructive-foreground: var(--destructive-foreground);
	--color-border: var(--border);
	--color-input: var(--input);
	--color-ring: var(--ring);
	--color-chart-1: var(--chart-1);
	--color-chart-2: var(--chart-2);
	--color-chart-3: var(--chart-3);
	--color-chart-4: var(--chart-4);
	--color-chart-5: var(--chart-5);
	--color-sidebar: var(--sidebar);
	--color-sidebar-foreground: var(--sidebar-foreground);
	--color-sidebar-primary: var(--sidebar-primary);
	--color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
	--color-sidebar-accent: var(--sidebar-accent);
	--color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
	--color-sidebar-border: var(--sidebar-border);
	--color-sidebar-ring: var(--sidebar-ring);

	--font-mono: 'BerkeleyMono', monospace;
	--font-serif: serif;
	--font-sans: 'Inter', sans-serif;

	--tracking-normal: 0em;
	--spacing: 0.25rem;

	--radius: 0.5rem;
	--radius-sm: calc(var(--radius) - 4px);
	--radius-md: calc(var(--radius) - 2px);
	--radius-lg: var(--radius);
	--radius-xl: calc(var(--radius) + 4px);

	--shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
	--shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
	--shadow-sm:
		0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 1px 2px -1px hsl(0 0% 0% / 0.1);
	--shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 1px 2px -1px hsl(0 0% 0% / 0.1);
	--shadow-md:
		0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 2px 4px -1px hsl(0 0% 0% / 0.1);
	--shadow-lg:
		0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 4px 6px -1px hsl(0 0% 0% / 0.1);
	--shadow-xl:
		0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 8px 10px -1px hsl(0 0% 0% / 0.1);
	--shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
}

@layer base {
	* {
		@apply border-border outline-ring/50;
	}
	body {
		@apply bg-background text-foreground;
	}
}

